@@ -66,7 +66,7 @@ You can find links to these tutorials and other documentation files below.
 
 <hr>
 
-<font size=+1><b>Text File Documentation</b></font><br><li><a href=../README.TXT>README</a> - Pygame version 1.0.9</li>
+<font size=+1><b>Text File Documentation</b></font><br><li><a href=../README.TXT>README</a> - Pygame version 1.1</li>
 <li><a href=LGPL>LGPL</a> - Gnu lesser general public license</li>
 <li><a href=fullinstall.txt>fullinstall</a> - Build instructions for building and installing pygame</li>
 <li><a href=init.txt>init</a> - Information about importing and initializing pygame</li><br>&nbsp;<br><font size=+1><b>Tutorials</b></font><br><li><a href=tut/ChimpLineByLine.html>tut/ChimpLineByLine</a> - Line by Line Descriptions of the Chimp Example
